@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.86 2009-01-11 00:48:42 nicm Exp $
+# $Id: Makefile,v 1.87 2009-01-11 23:14:57 nicm Exp $
 
 .SUFFIXES: .c .o .y .h
 .PHONY: clean update-index.html upload-index.html
@@ -37,6 +37,7 @@ SRCS= tmux.c server.c server-msg.c server-fn.c buffer.c buffer-poll.c status.c \
       cmd-list-commands.c cmd-move-window.c cmd-select-prompt.c \
       cmd-respawn-window.c cmd-source-file.c cmd-server-info.c \
       cmd-clock-mode.c cmd-lock-server.c cmd-set-password.c \
+      cmd-save-buffer.c \
       window-clock.c window-scroll.c window-more.c window-copy.c \
       options.c options-cmd.c paste.c colour.c utf8.c clock.c \
       tty.c tty-term.c tty-keys.c tty-write.c
